<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".Vaccines">

    <TextView
        android:id="@+id/mainHeading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/desc"
        android:fontFamily="@font/oswald_bold"
        android:gravity="center_horizontal"
        android:text="@string/heading"
        android:textAlignment="center"
        android:textColor="@color/heading"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/last_updated"
            android:textSize="22sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/dateUpdated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.5dp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/heading"
            android:text="@string/date_here"
            android:textSize="22sp"
            android:visibility="visible" />

    </LinearLayout>

<!--    <ListView-->
<!--        android:id="@+id/CompleteList"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_gravity="center"-->
<!--        app:fastScrollEnabled="false"-->
<!--        tools:listitem="@layout/custom_vaccines_layout"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/CountryList"
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:layout_gravity="clip_horizontal" />

        <ListView
            android:id="@+id/VaccineList"
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>


    <!-- Navbar Section -->
    <LinearLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.7"
        android:layout_marginTop="5dp"
        android:background="#7e9492"
        android:gravity="center_horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/inCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="openList"
            android:text="@string/cases_in_country"
            android:textSize="20sp"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <TextView
            android:id="@+id/inWorldwide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="openHome"
            android:text="@string/worldwide"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/byVaccines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="samePage"
            android:text="@string/vaccine"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>


</LinearLayout>