<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background"
android:orientation="vertical"
tools:context=".CountryList">

    <TextView
        android:id="@+id/mainHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/desc"
        android:fontFamily="@font/oswald_bold"
        android:gravity="center_horizontal"
        android:text="@string/heading"
        android:textAlignment="center"
        android:textColor="@color/heading"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/select_country"
        android:textColor="@color/sub_heading"
        android:textSize="28sp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/countryList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        />
<!--    app:fastScrollEnabled="false"-->

</LinearLayout>

